attempted to fix scroll bug on mobile. We'll see

--- a/css/main.scss
+++ b/css/main.scss
@@ -32,6 +32,60 @@ $green: #479648;
 -webkit-transition-duration: $time;
 }
 
+/*-----12 col grid------*/
+
+@mixin col($num_col){
+
+	@if $num_col == 1 {
+		width: 8.33333333%;
+		}
+	@if $num_col == 2 {
+		width: 16.6666667%;
+		}
+	@if $num_col == 3 {
+		width: 25%;
+		}
+	@if  $num_col == 4 {
+		width: 33.3333333%;
+		}
+	@if $num_col == 5 {
+		width: 41.6666666%;
+		}
+	@if $num_col == 6 {
+		width: 50%;
+		}
+	@if $num_col == 7 {
+		width: 58.3333333%;
+		}
+	@if $num_col == 8 {
+		width: 66.6666666%;
+		}
+	@if $num_col == 9 {
+		width: 75%;
+		}
+	@if $num_col == 10{
+		width: 83.3333333%;
+		}
+	@if $num_col == 11 {
+		width: 91.6666666%;
+		}
+	@if $num_col == 12 {
+		width: 100%;
+	}
+}
+
+// @include col(12);
+
+@mixin vertical-align {
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
 /*--------------------------------------Start CSS Reset---------------------------------------------*/
 
 /* http://meyerweb.com/eric/tools/css/reset/
@@ -151,12 +205,6 @@ img{
 	width: 100%;
 }
 
-.page{
-	width: 100%;
-	height: 831px;
-	margin-bottom: 9px;
-}
-
 .double{
 	height: 1680px;
 }
@@ -207,7 +255,8 @@ header{
 }
 
 .page-inner{
-	max-width: 1140px;
+	// max-width: 1140px;
+	@include col(10);
 	margin: 0 auto;
 	padding-top: 54px;
 	text-align: center;
@@ -215,8 +264,11 @@ header{
 }
 
 .page{
-	overflow-x: hidden;
-	
+	@include col(12);
+	// min-height: 831px;
+	margin-bottom: 9px;
+	padding-bottom: 72px;
+
 	p{
 		width: 504px; /*28x18*/
 		margin: 0 auto;
